# kubera

./: .gitignore  README.md  checklist.md  error.txt  pyproject.toml  tmp_predict_march_16.py
config/: holiday_sync.json
config/exchange_closures/: india.json
docs/: implementation_deep_dive.md  local_notes.md  marketaux_phase9a_research.md  operator_news_pipeline.md
src/kubera/: __init__.py  bootstrap.py  cli.py  sync_holidays.py
src/kubera/config/: __init__.py  settings.py
src/kubera/features/: __init__.py  historical_features.py  news_features.py
src/kubera/ingest/: __init__.py  market_data.py  news_data.py
src/kubera/llm/: __init__.py  extract_news.py
src/kubera/models/: __init__.py  artifact_validation.py  common.py  train_baseline.py  train_enhanced.py
src/kubera/pilot/: __init__.py  live_pilot.py
src/kubera/reporting/: __init__.py  dashboard.py  final_review.py  offline_evaluation.py
src/kubera/utils/: __init__.py  calendar.py  data_quality.py  git_utils.py  hashing.py  logging.py  paths.py  run_context.py  serialization.py  time_utils.py  user_failure.py
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_dashboard.py  test_exchange_closures.py  test_extract_news.py  test_final_review.py  test_historical_features.py  test_live_pilot.py  test_market_data.py  test_news_data.py  test_news_features.py  test_offline_evaluation.py  test_paths_and_runs.py  test_security_controls.py  test_settings.py  test_sync_holidays.py  test_time_utils.py  test_train_baseline.py  test_train_enhanced.py  test_user_failure.py  test_v3_improvements.py
(+4 files in other folders)
