[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kubera"
version = "0.1.0"
description = "LLM-enhanced Indian stock movement prediction system for NSE equities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "pandas>=2.2,<3.0",
    "pandas_market_calendars>=4.4,<5.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.32,<3.0",
    "rich>=13.7,<14.0",
    "scikit-learn>=1.5,<2.0",
    "shap>=0.45,<0.47",
    "yfinance>=0.2.40,<0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
kubera = "kubera.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
